[package]
name = "openvb"
version = "0.1.1"
edition = "2021"

[dependencies]
usid = { git = "ssh://git@github.com/ExpressiveLabs/usid.git", features = ["serde"] }

anyhow = "1.0.93"
bincode = "1.3.3"
chrono = {version = "0.4.38", optional = true}
dotenv = "0.15.0"
fixedbitset = "0.5.7"
intbits = "0.2.0"
ipa-translate = {version = "0.2.0", optional = true}
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
textgridde-rs = {version = "0.1.1", optional = true}
threadpool = "1.8.1"
tqdm = {version ="0.7.0", optional = true}
uuid = {version ="1.11.0", features = ["v4", "serde"]}
wavers = {version = "1.4.3", optional = true}
yin = {version = "0.2.0", optional = true}

[features]
default = ['generator', 'translate']
generator = ["textgridde-rs", "tqdm", "wavers", "yin", "chrono", "translate"]
translate = ["ipa-translate"]

[profile.dev]
features = ["generator", "translate"]